# jinshu

./: Cargo.toml  README.md  gares.ji  polymorph
services/openrc/: ji  jinshu
services/rc/: ji
services/systemd/: ji.service  jinshu.service
src/: algos.rs  ast.rs  bytecode.rs  codegen.rs  crypto.rs  db.rs  lexer.rs  main.rs  optimizer.rs  parser.rs  server.rs  store.rs  token.rs  vm.rs  web.rs
ui/: index.html
