[package]
name = "jinshu"
version = "0.1.0"
edition = "2024"
description = "A secure, immutable, goal-oriented cognitive graph database."
license =  "AGPL-3.0"
readme = "README.md"
keywords = ["base"]
categories = ["command-line-utilities"]
repository = "https://github.com/kognitara/jinshu"
[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
blake3 = "1.8.5"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
inquire = { version = "0.9.4", features = ["console", "date", "editor"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
wgpu = { version = "29.0.3", features = ["trace"] }
zstd = "0.13.3"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
is-terminal = "0.4.17"
thiserror = "2.0.18"
indicatif = "0.18.4"
rustyline = "15.0.0"
crossterm = "0.29.0"
scraper = "0.27.0"
reqwest = "0.13.4"
governor = "0.10.4"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
sha2 = "0.11.0"
pqcrypto-kyber = "0.8.1"
rand = "0.10.1"
argon2 = "0.5.3"
